--- a/Advanced_google_data_analytics_capstone.ipynb
+++ b/Advanced_google_data_analytics_capstone.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1BrBvfGs99MpE11qG9iGL3vakkHCEhqo8",
-      "authorship_tag": "ABX9TyOhCXEWCleZZ85ZRYTFWhcq",
+      "authorship_tag": "ABX9TyMjubRKVME2Ys76U01iP/YS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "\n",
         "Throughout the project, it is crucial to address ethical considerations and potential biases in the data or model. Demonstrating the ability to mitigate biases and limitations will be essential.\n",
         "\n",
-        "By presenting these artifacts, you will demonstrate your skills in data analysis, model development, communication, and problem-solving. This project showcases your ability to deliver meaningful insights to stakeholders and make data-driven decisions.\n",
+        "By presenting these artifacts, i will demonstrate my skills in data analysis, model development, communication, and problem-solving. This project showcases your ability to deliver meaningful insights to stakeholders and make data-driven decisions.\n",
         " In this analysis i used the PACE  strategy for this project in my analysis process.\n",
         "\n"
       ],
@@ -7159,6 +7159,15 @@
       "metadata": {
         "id": "TR5IXdtIFbeS"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zeERQsHhLYn6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
